# mollusk-flamegraphs

./: .gitignore  Cargo.toml  README.md  package.json
.claude/: profiling.md
idls/: hello_world_program.json
programs/.bin/: hello_world_program-keypair.json
programs/hello-world/: Cargo.toml  README.md  rustfmt.toml
programs/hello-world/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs
programs/hello-world/src/processor/: hello_world.rs  mod.rs
programs/hello-world/src/state/: hello_world_account.rs  mod.rs
scripts/: generate-clients.ts  generate-idls.ts
scripts/programs/: build.sh  profile.sh  test.sh
