[workspace]
members = ["programs/hello-world"]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
overflow-checks = false # Enable integer overflow checks.
strip = false           # Automatically strip symbols from the binary.

[patch.crates-io]
solana-sbpf = { git = "https://github.com/serbangv/sbpf-profiler" }
