[package]
edition = "2021"
name = "hello-world-program"
publish = false
readme = "./README.md"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^0.10"
bytemuck = { version = "1.21.0", features = ["derive", "min_const_generics"] }
# mpl-utils = "^0.3.6"
num-derive = "0.4.2"
podded = "0.5.2"
num-traits = "0.2.19"
shank = "0.4.5"
solana-program = "2.2.1"
solana-sdk-ids = "2.2.1"
solana-account = "2.2.1"
solana-system-interface = { version = "1.0.0", features = ["bincode"] }
spl-associated-token-account = { version = "7.0.0", features = [
  "no-entrypoint",
] }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
thiserror = "^1.0"

[dev-dependencies]
mollusk-svm = "0.5.1"
solana-program-test = "2.2.1"